2012-03-28 John Wu <John dot Wu at ACM dot org>
	* src/bord.cpp: update documentation of ibis::bord::groupbya to
	clarify the operations carried out

2012-03-27 John Wu <John dot Wu at ACM dot org>
	* runconfig: update the handling of generic NERSC host with GCC
	compilers
	* ChangeLog: marked as version ibis1.3.6 to support a new public
	release of FastQuery

2012-03-22 John Wu <John dot Wu at ACM dot org>
	* src/part.h, src/mensa.h, src/mensa.cpp: add function
	dropPartition as the reverse of addPartition per request of Lin
	Qiao

2012-03-21 John Wu <John dot Wu at ACM dot org>
	* src/index.h, src/index.cpp: move sizeInBytes from index.h to
	index.cpp, add code to update offset64 as needed (to address the
	case where the bitmaps are in memory but the offset arrays are not
	initialized)

2012-03-20 John Wu <John dot Wu at ACM dot org>
	* src/index.h:470 add check for fname != 0 based on feedback from
	Jong Choi

2012-03-17 John Wu <John dot Wu at ACM dot org>
	* examples/ibis.cpp: add note about not accepting any group-by
	clause (in response to question from Amihay Gonen)

2012-03-13 John Wu <John dot Wu at ACM dot org>
	* INSTALL: restore the lost file from SVN revision 604

2012-03-06 John Wu <John dot Wu at ACM dot org>
	* examples/ardea.cpp, src/table.h: add comment about end of line
	character based on the input from Stanislav Seltser <sseltser at
	soroki.com>

2012-02-08 Patrik Nisen <patrik at nisen dot name>
	* src/bord.cpp:11149 add block to convert internal integer
	representation of categories back as strings for output

2012-02-07 John Wu <John dot Wu at ACM dot org>
	* src/column.cpp: in function loadIndex, allow
	thePart->currentDataDir() to be nil (for in memory data)

2012-02-05 John Wu <John dot Wu at ACM dot org>
	* src/ikeywords.cpp:411 neglected to multiply 2048 in the size
	computation (a problem reported by Julian Suszko <suszko @ a9.com>

2012-01-10 John Wu <John dot Wu at ACM dot org>
	* src/*, examples/*: update copyright year to 2013